[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprite/enemy.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "enemyDead",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "enemyRun",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
height = 12.4684

[node name="Enemy" type="Area2D"]
collision_layer = 64
collision_mask = 15
script = ExtResource( 2 )

[node name="spr_enemy" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "enemyDead"
playing = true

[node name="coll_enemy" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -18 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
